adapt assertions